--- a/views/voter/data-privacy.ejs
+++ b/views/voter/data-privacy.ejs
@@ -60,7 +60,7 @@
 
         <label for="agreement">
           <input type="checkbox" id="agreement" onchange="toggleButton()" required />
-          I Agree
+          &nbsp; I Agree
         </label>
         <br />
         <div class="center">
