--- a/views/voter/register.ejs
+++ b/views/voter/register.ejs
@@ -101,7 +101,7 @@
           <br />
           <div class="form-button">
             <!-- Submit button -->
-            <input type="button" id="submitBtn" value="SUBMIT" />
+            <input type="button" class="button" id="submitBtn" value="SUBMIT" />
           </div>
         </form>
       </div>
