--- a/views/voter/vote.ejs
+++ b/views/voter/vote.ejs
@@ -73,7 +73,7 @@
           <br />
 
           <!-- Supreme Student Council Section -->
-          <div class="ballot ballot-ssc">
+          <div class="ballot ballot-ssc box-shadow">
             <br />
             <h3 class="ballot-header ballot-council">BulSU Supreme Student Council</h3>
             <br />
@@ -100,7 +100,7 @@
             <div class="checkbox-wrapper-10">
               <!-- Remove name attribute from the abstain checkbox -->
               <input type="checkbox" id="abstain-president" data-group="president" value="<%= JSON.stringify(abstainPresident) %>" class="tgl tgl-flip abstain-checkbox" />
-              <label for="abstain-president" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
+              <label for="abstain-president" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn hello"></label>
             </div>
             <br />
 
