--- a/public/voter/css/review.css
+++ b/public/voter/css/review.css
@@ -115,7 +115,7 @@
   width: 7.5rem;
   margin-bottom: 1rem;
   border-radius: 50%;
-  border: 0.2rem solid black;
+  /* border: 0.2rem solid black; */
   object-fit: cover;
   background-color: royalblue;
 }
@@ -233,7 +233,7 @@
   background-color: #ffffff00;
   position: relative;
   color: black;
-  width: 10em;
+  width: 7.8em;
   height: 2.9em;
   background-color: white;
   border: var(--color-hover) 0.2em solid;
@@ -241,6 +241,7 @@
   /* text-align: right; */
   transition: all 0.6s ease;
   font-size: 1rem;
+  /* gap: 1rem; */
 }
 
 .button-back:hover {
@@ -265,6 +266,7 @@
 #submitBtn {
   margin: 0;
   height: 3rem;
+  padding: 1rem;
 }
 
 /* Submit Votes */
@@ -467,10 +469,6 @@
   }
 }
 
-.text {
-  justify-self: right;
-}
-
 .ballot-choices input[type="radio"]:checked + label {
   background: var(--color-selected-bg);
   pointer-events: none; /* Prevent toggling */
@@ -505,4 +503,8 @@
 .label-container {
   width: 100%;
   height: 100%;
+}
+
+.text {
+  padding-left: 1.9rem;
 }
