--- a/views/admin/system-activity-log.ejs
+++ b/views/admin/system-activity-log.ejs
@@ -54,7 +54,7 @@
                 <th>Role</th>
                 <th>Action</th>
                 <!-- <th>Details</th> -->
-                <th>Type</th>
+                <!-- <th>Type</th> -->
               </tr>
             </thead>
             <tbody id="activityLogsTableBody">
@@ -66,7 +66,7 @@
                     <td><%= log.adminUsername %></td>
                     <td><%= log.adminRole %></td>
                     <td><%= log.eventName %></td>
-                    <td><%= log.activityType %></td>
+                    <!-- <td><%= log.activityType %></td> -->
                   </tr>
                 <% }) %>
               <% } else { %>
