--- a/views/admin/system-edit-account.ejs
+++ b/views/admin/system-edit-account.ejs
@@ -50,6 +50,13 @@
                   <div>
                     <label for="old-password">Password:</label>
                     <input type="password" id="old-password" name="oldPassword" placeholder="Old Password" disabled />
+                     <span class="toggle-password" onclick="togglePassword()" style="cursor:pointer;">
+    <svg class="input-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <!-- This SVG icon represents an eye; you can replace the path with another design if preferred -->
+      <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zm0 13c-3.04 0-5.5-2.46-5.5-5.5S8.96 6.5 12 6.5s5.5 2.46 5.5 5.5-2.46 5.5-5.5 5.5z"/>
+      <circle cx="12" cy="12" r="2.5"/>
+    </svg>
+  </span>
                   </div>
                   <!-- <div>
                     <label for="new-password">New Password:</label>
@@ -259,6 +266,18 @@ closeButton.addEventListener("click", () => {
     document.getElementById("new-password").value = "";
     document.getElementById("confirm-new-password").value = "";
   });
+</script>
+
+    <script>
+  function togglePassword() {
+    const passwordInput = document.getElementById("logpass");
+    // Toggle the type attribute
+    if (passwordInput.type === "password") {
+      passwordInput.type = "text";
+    } else {
+      passwordInput.type = "password";
+    }
+  }
 </script>
 
   </body>
